fix: Uncaught TypeError 🍄‍🟫
The change included in 9668c0c caused this to occur on first access with a chromium-based browser.

...I'm not quite sure why 🤷‍♀️

--- a/theme/header.hbs
+++ b/theme/header.hbs
@@ -7,7 +7,7 @@
 e||(e=matchMedia("(prefers-color-scheme: dark)").matches?"{{preferred_dark_theme}}":"{{default_theme}}"),
 document.querySelector("html").classList.add(e),
 setTimeout((()=>{document.querySelector('meta[name="theme-color"]').content=window.getComputedStyle(document.body).backgroundColor,
-document.getElementById(e).classList.add("theme-selected")}))})();
+document.getElementById(e).classList.add("theme-selected")}),1)})();
 </script>
 
 <script>
