--- a/theme/header.hbs
+++ b/theme/header.hbs
@@ -5,9 +5,7 @@
 <script>
 (()=>{let e=localStorage.getItem("mdbook-theme");
 e||(e=matchMedia("(prefers-color-scheme: dark)").matches?"{{preferred_dark_theme}}":"{{default_theme}}"),
-document.querySelector("html").classList.add(e),
-setTimeout((()=>{document.querySelector('meta[name="theme-color"]').content=window.getComputedStyle(document.body).backgroundColor,
-document.getElementById(e).classList.add("theme-selected")}),1)})();
+document.querySelector("html").classList.add(e)})();
 </script>
 
 <script>
