--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -35,19 +35,19 @@
     <div class="top-bar">
       <div id="menu-bar" class="menu-bar">
         <div class="left-buttons">
-          <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents (Shortkey: T )" aria-label="Toggle Table of Contents" aria-controls="sidebar"></button>
-          <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme"
+          <button id="sidebar-toggle" class="icon-button" title="Toggle Table of Contents (Shortkey: T )" aria-label="Toggle Table of Contents" aria-controls="sidebar"></button>
+          <button popovertarget="theme-popover" class="icon-button" title="Change theme" aria-label="Change theme"
   aria-haspopup="true" aria-expanded="false" aria-controls="theme-list"></button>
-          <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-            <li role="none"><button role="menuitem" class="theme" id="au-lait">Au Lait</button></li>
-            <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
-            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
-            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
-            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
-          </ul>
-
-          {{#if search_enabled}}
-          <button id="search-toggle" class="icon-button" type="button" title="Toggle Search Box (Shortkey: / )"
+            <div id="theme-popover" popover>
+              <ul id="theme-list" aria-label="Themes" role="menu">
+                <li role="none"><button role="menuitem" class="theme" id="au-lait">Au Lait</button></li>
+                <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
+                <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
+                <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
+                <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
+              </ul>
+            </div>
+          <button id="search-toggle" class="icon-button" title="Toggle Search Box (Shortkey: / )"
   aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar"></button>
 
           <div id="search-wrapper" class="hidden">
@@ -60,7 +60,6 @@
               <ul id="searchresults"></ul>
             </div>
           </div>
-          {{/if}}
         </div>
 
         <div class="menu-title">{{ book_title }}</div>
