--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -53,8 +53,8 @@
               <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..."
                 aria-controls="searchresults-outer" aria-describedby="searchresults-header">
             </form>
-            <div id="searchresults-outer" class="searchresults-outer hidden">
-              <div id="searchresults-header" class="searchresults-header"></div>
+            <div id="searchresults-outer" popover>
+              <div id="searchresults-header"></div>
               <ul id="searchresults"></ul>
             </div>
           </div>
