--- a/scss/_chrome.scss
+++ b/scss/_chrome.scss
@@ -49,48 +49,13 @@ mark {
 }
 
 .icon-button {
-  font-family: 'Open Sans', 'Symbols Nerd Font Mono';
+  font-family: 'Symbols Nerd Font Mono';
   border: none;
   background: none;
 }
 
 pre {
   position: relative;
-
-  &>.buttons {
-    position: absolute;
-    right: 0;
-    top: 0.4rem;
-
-    color: var(--sidebar-fg);
-    cursor: pointer;
-    visibility: hidden;
-    opacity: 0;
-    transition:
-      visibility 0.1s linear,
-      opacity 0.1s linear;
-
-    :hover {
-      color: var(--sidebar-active);
-      border-color: var(--icons-hover);
-      background-color: var(--theme-hover);
-    }
-
-    button {
-      font-family: "Symbols Nerd Font Mono";
-      cursor: inherit;
-      margin: 0 0.4rem;
-      padding: 0.4rem 0.4rem;
-      border-style: solid;
-      border-width: 0.1rem;
-      border-radius: 0.4rem;
-      border-color: var(--icons);
-      background-color: var(--theme-popup-bg);
-      transition: 100ms;
-      transition-property: color, border-color, background-color;
-      color: var(--icons);
-    }
-  }
 
   &>code {
     display: block;
@@ -100,9 +65,48 @@ pre {
     border-radius: 0.4rem;
   }
 
-  &:hover>.buttons {
+  &:hover>.icon-button {
     visibility: visible;
     opacity: 1;
+  }
+
+  &>.icon-button {
+    position: absolute;
+    top: 0.3rem;
+    right: 0;
+
+    color: var(--sidebar-fg);
+    background-color: var(--theme-popup-bg);
+
+    cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
+
+    margin: 0 0.4rem;
+    padding: 0.4rem 0.4rem;
+
+    border: 0.1rem var(--table-border-color) solid;
+    border-color: var(--icons);
+    border-radius: 0.4rem;
+
+    transition: 300ms;
+    transition-property: color, border-color, background-color;
+
+    &:hover {
+      color: var(--sidebar-active);
+      border-color: var(--icons-hover);
+      background-color: var(--theme-hover);
+    }
+
+    #tooltiptext {
+      position: absolute;
+      color: #fff;
+      background-color: #333;
+      top: -2.6em;
+      left: -2.3em;
+      border-radius: 0.8rem;
+      padding: 0.5em 1.2em;
+    }
   }
 }
 
@@ -385,27 +389,8 @@ table {
   }
 }
 
-.tooltiptext {
-  position: absolute;
-  visibility: hidden;
-  color: #fff;
-  background-color: #333;
-  left: -1.8em;
-  top: -3.5em;
-  width: 4em;
-  height: 1em;
-  text-align: center;
-  border-radius: 0.8rem;
-  padding: 0.4em 0.8em;
-  margin: 0.4em;
-
-  .tooltipped & {
-    visibility: visible;
-  }
-}
-
 @media (pointer: coarse) {
-  pre>.buttons button {
+  pre>.icon-button {
     padding: 0.4rem 1rem; // On mobile, make it easier to tap buttons.
   }
 }
