I always get caught off guard by css... 🤦‍♀️

--- a/scss/_chrome.scss
+++ b/scss/_chrome.scss
@@ -49,7 +49,7 @@ mark {
 }
 
 .icon-button {
-  font-family: 'Symbols Nerd Font Mono';
+  font-family: 'Open Sans', 'Symbols Nerd Font Mono';
   border: none;
   background: none;
 }
