--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -100,9 +100,7 @@
 
         <spacer></spacer>
 
-        <div class="righttoc" aria-label="Table of contents">
-          <nav class="pagetoc"></nav>
-        </div>
+        <div id="righttoc" aria-label="Table of contents"></div>
       </div>
     </div>
 
