--- a/scss/_additional-color.scss
+++ b/scss/_additional-color.scss
@@ -1,11 +1,14 @@
-.au-lait, .latte {
+.au-lait,
+.latte {
   --page-toc-background: #fff8c5;
   --page-toc-color: #1f2328;
 
   --search-score: #40a02b;
 }
 
-.frappe, .macchiato, .mocha {
+.frappe,
+.macchiato,
+.mocha {
   --page-toc-background: #4b2900;
   --page-toc-color: #f8e3a1;
 
