--- a/scss/_mdbook-admonish.scss
+++ b/scss/_mdbook-admonish.scss
@@ -26,22 +26,27 @@
   border-radius: 0.2rem;
   box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.05), 0 0 0.1rem rgba(0, 0, 0, 0.1);
 }
+
 @media print {
   :is(.admonition) {
     box-shadow: none;
   }
 }
-:is(.admonition) > * {
+
+:is(.admonition)>* {
   box-sizing: border-box;
 }
+
 :is(.admonition) :is(.admonition) {
   margin-top: 1em;
   margin-bottom: 1em;
 }
-:is(.admonition) > .tabbed-set:only-child {
+
+:is(.admonition)>.tabbed-set:only-child {
   margin-top: 0;
 }
-html :is(.admonition) > :last-child {
+
+html :is(.admonition)> :last-child {
   margin-bottom: 1.2rem;
 }
 
@@ -51,12 +56,17 @@ a.admonition-anchor-link {
   left: -1.2rem;
   padding-right: 1rem;
 }
-a.admonition-anchor-link:link, a.admonition-anchor-link:visited {
+
+a.admonition-anchor-link:link,
+a.admonition-anchor-link:visited {
   color: var(--fg);
 }
-a.admonition-anchor-link:link:hover, a.admonition-anchor-link:visited:hover {
+
+a.admonition-anchor-link:link:hover,
+a.admonition-anchor-link:visited:hover {
   text-decoration: none;
 }
+
 a.admonition-anchor-link::before {
   content: "§";
 }
@@ -74,12 +84,15 @@ a.admonition-anchor-link::before {
   -webkit-print-color-adjust: exact;
   display: flex;
 }
+
 :is(.admonition-title, summary.admonition-title) p {
   margin: 0;
 }
+
 html :is(.admonition-title, summary.admonition-title):last-child {
   margin-bottom: 0;
 }
+
 :is(.admonition-title, summary.admonition-title)::before {
   position: absolute;
   top: 0.7em;
@@ -97,11 +110,12 @@ html :is(.admonition-title, summary.admonition-title):last-child {
   -webkit-mask-size: contain;
   content: "";
 }
+
 :is(.admonition-title, summary.admonition-title):hover a.admonition-anchor-link {
   display: initial;
 }
 
-details.admonition > summary.admonition-title::after {
+details.admonition>summary.admonition-title::after {
   position: absolute;
   top: 0.7em;
   inset-inline-end: 1rem;
@@ -118,7 +132,8 @@ details.admonition > summary.admonition-title::after {
   transform: rotate(0deg);
   transition: transform 0.25s;
 }
-details[open].admonition > summary.admonition-title::after {
+
+details[open].admonition>summary.admonition-title::after {
   transform: rotate(90deg);
 }
 
@@ -126,10 +141,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #448aff;
 }
 
-:is(.admonish-note) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-note)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(68, 138, 255, 0.1);
 }
-:is(.admonish-note) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-note)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #448aff;
   mask-image: var(--md-admonition-icon--admonish-note);
   -webkit-mask-image: var(--md-admonition-icon--admonish-note);
@@ -142,10 +158,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #00b0ff;
 }
 
-:is(.admonish-abstract, .admonish-summary, .admonish-tldr) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-abstract, .admonish-summary, .admonish-tldr)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(0, 176, 255, 0.1);
 }
-:is(.admonish-abstract, .admonish-summary, .admonish-tldr) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-abstract, .admonish-summary, .admonish-tldr)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #00b0ff;
   mask-image: var(--md-admonition-icon--admonish-abstract);
   -webkit-mask-image: var(--md-admonition-icon--admonish-abstract);
@@ -158,10 +175,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #00b8d4;
 }
 
-:is(.admonish-info, .admonish-todo) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-info, .admonish-todo)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(0, 184, 212, 0.1);
 }
-:is(.admonish-info, .admonish-todo) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-info, .admonish-todo)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #00b8d4;
   mask-image: var(--md-admonition-icon--admonish-info);
   -webkit-mask-image: var(--md-admonition-icon--admonish-info);
@@ -174,10 +192,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #00bfa5;
 }
 
-:is(.admonish-tip, .admonish-hint, .admonish-important) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-tip, .admonish-hint, .admonish-important)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(0, 191, 165, 0.1);
 }
-:is(.admonish-tip, .admonish-hint, .admonish-important) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-tip, .admonish-hint, .admonish-important)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #00bfa5;
   mask-image: var(--md-admonition-icon--admonish-tip);
   -webkit-mask-image: var(--md-admonition-icon--admonish-tip);
@@ -190,10 +209,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #00c853;
 }
 
-:is(.admonish-success, .admonish-check, .admonish-done) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-success, .admonish-check, .admonish-done)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(0, 200, 83, 0.1);
 }
-:is(.admonish-success, .admonish-check, .admonish-done) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-success, .admonish-check, .admonish-done)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #00c853;
   mask-image: var(--md-admonition-icon--admonish-success);
   -webkit-mask-image: var(--md-admonition-icon--admonish-success);
@@ -206,10 +226,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #64dd17;
 }
 
-:is(.admonish-question, .admonish-help, .admonish-faq) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-question, .admonish-help, .admonish-faq)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(100, 221, 23, 0.1);
 }
-:is(.admonish-question, .admonish-help, .admonish-faq) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-question, .admonish-help, .admonish-faq)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #64dd17;
   mask-image: var(--md-admonition-icon--admonish-question);
   -webkit-mask-image: var(--md-admonition-icon--admonish-question);
@@ -222,10 +243,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #ff9100;
 }
 
-:is(.admonish-warning, .admonish-caution, .admonish-attention) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-warning, .admonish-caution, .admonish-attention)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(255, 145, 0, 0.1);
 }
-:is(.admonish-warning, .admonish-caution, .admonish-attention) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-warning, .admonish-caution, .admonish-attention)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #ff9100;
   mask-image: var(--md-admonition-icon--admonish-warning);
   -webkit-mask-image: var(--md-admonition-icon--admonish-warning);
@@ -238,10 +260,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #ff5252;
 }
 
-:is(.admonish-failure, .admonish-fail, .admonish-missing) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-failure, .admonish-fail, .admonish-missing)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(255, 82, 82, 0.1);
 }
-:is(.admonish-failure, .admonish-fail, .admonish-missing) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-failure, .admonish-fail, .admonish-missing)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #ff5252;
   mask-image: var(--md-admonition-icon--admonish-failure);
   -webkit-mask-image: var(--md-admonition-icon--admonish-failure);
@@ -254,10 +277,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #ff1744;
 }
 
-:is(.admonish-danger, .admonish-error) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-danger, .admonish-error)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(255, 23, 68, 0.1);
 }
-:is(.admonish-danger, .admonish-error) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-danger, .admonish-error)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #ff1744;
   mask-image: var(--md-admonition-icon--admonish-danger);
   -webkit-mask-image: var(--md-admonition-icon--admonish-danger);
@@ -270,10 +294,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #f50057;
 }
 
-:is(.admonish-bug) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-bug)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(245, 0, 87, 0.1);
 }
-:is(.admonish-bug) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-bug)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #f50057;
   mask-image: var(--md-admonition-icon--admonish-bug);
   -webkit-mask-image: var(--md-admonition-icon--admonish-bug);
@@ -286,10 +311,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #7c4dff;
 }
 
-:is(.admonish-example) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-example)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(124, 77, 255, 0.1);
 }
-:is(.admonish-example) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-example)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #7c4dff;
   mask-image: var(--md-admonition-icon--admonish-example);
   -webkit-mask-image: var(--md-admonition-icon--admonish-example);
@@ -302,10 +328,11 @@ details[open].admonition > summary.admonition-title::after {
   border-color: #9e9e9e;
 }
 
-:is(.admonish-quote, .admonish-cite) > :is(.admonition-title, summary.admonition-title) {
+:is(.admonish-quote, .admonish-cite)> :is(.admonition-title, summary.admonition-title) {
   background-color: rgba(158, 158, 158, 0.1);
 }
-:is(.admonish-quote, .admonish-cite) > :is(.admonition-title, summary.admonition-title)::before {
+
+:is(.admonish-quote, .admonish-cite)> :is(.admonition-title, summary.admonition-title)::before {
   background-color: #9e9e9e;
   mask-image: var(--md-admonition-icon--admonish-quote);
   -webkit-mask-image: var(--md-admonition-icon--admonish-quote);
