fix: `DEPRECATION WARNING` 🔩
---
DEPRECATION WARNING: Sass's behavior for declarations that appear after nested
rules will be changing to match the behavior specified by CSS in an upcoming
version. To keep the existing behavior, move the declaration above the nested
rule. To opt into the new behavior, wrap the declaration in `& {}`.

More info: https://sass-lang.com/d/mixed-decls
---

--- a/scss/general.scss
+++ b/scss/general.scss
@@ -60,8 +60,10 @@ body {
     display: grid;
   }
 
-  grid-template-columns: var.$sidebar-width 1fr;
-  min-height: calc(100dvh - var.$menu-bar-height);
+  & {
+    grid-template-columns: var.$sidebar-width 1fr;
+    min-height: calc(100dvh - var.$menu-bar-height);
+  }
 }
 
 .content {
