--- a/scss/general.scss
+++ b/scss/general.scss
@@ -71,7 +71,7 @@ body {
   grid-template-columns: 1rem 1fr 1rem;
   column-gap: 1rem;
 
-  @media only screen and (min-width: var.$enable-pagetoc) {
+  @media only screen and (min-width: var.$mobile-max-width) {
     grid-template-columns: 1rem 1fr 0 var.$pagetoc-width 0;
   }
 
