--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -100,9 +100,9 @@
 
         <spacer></spacer>
 
-        <div id="righttoc" aria-label="Table of contents (right)"></div>
+        <div id="righttoc" aria-label="Table of contents"></div>
       </div>
-      <div id="undertoc" aria-label="Table of contents (under)"></div>
+      <div id="bottomtoc" aria-label="Table of contents (bottom)"></div>
     </div>
 
     <link rel="stylesheet" href="{{ path_to_root }}css/style.css" async>
