--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,8 +2,11 @@ $mobile-max-width: 680px;
 
 $sidebar-width: 12.5rem;
 $pagetoc-width: 12rem;
+$pagetoc-bottom-height: 2.4rem;
 
-$scrollbar-width: 0.5rem;
+$scrollbar-webkit-width: 0.5rem;
+$scrollbar-webkit-height: 0.26rem;
+
 $menu-bar-height: 2.6rem;
 
 $jump-shift: 1.25rem;
