--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,10 +1,12 @@
 $mobile-max-width: 680px;
-$enable-pagetoc: 760px;
 
 $sidebar-width: 12.5rem;
 $pagetoc-width: 12rem;
+$pagetoc-bottom-height: 2.4rem;
 
-$scrollbar-width: 0.5rem;
+$scrollbar-webkit-width: 0.5rem;
+$scrollbar-webkit-height: 0.26rem;
+
 $menu-bar-height: 2.6rem;
 
 $jump-shift: 1.25rem;
