--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -102,6 +102,7 @@
 
         <div id="righttoc" aria-label="Table of contents"></div>
       </div>
+      <div id="bottomtoc" aria-label="Table of contents (bottom)"></div>
     </div>
 
     <link rel="stylesheet" href="{{ path_to_root }}css/style.css" async>
