Load `Nerd Fonts` only when necessary 🤓

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -11,7 +11,7 @@ $menu-bar-height: 2.6rem;
 
 $jump-shift: 1.25rem;
 
-$mono-font: 'Source Code Pro', 'Symbols Nerd Font Mono', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
+$mono-font: 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.82em;
 
 $color-pink: #ffb2cc;
