--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -35,18 +35,24 @@
     <div class="top-bar">
       <div id="menu-bar" class="menu-bar">
         <div class="left-buttons">
-          <button id="sidebar-toggle" class="icon-button" title="Toggle Table of Contents (Shortkey: T )" aria-label="Toggle Table of Contents" aria-controls="sidebar"></button>
-          <button popovertarget="theme-list" class="icon-button" title="Change theme" aria-label="Change theme"
-  aria-haspopup="true" aria-expanded="false" aria-controls="theme-list"></button>
-            <ul id="theme-list" aria-label="Themes" role="menu" popover>
-              <li role="none"><button role="menuitem" class="theme" id="au-lait">Au Lait</button></li>
-              <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
-              <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
-              <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
-              <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
-            </ul>
-          <button id="search-toggle" class="icon-button" title="Toggle Search Box (Shortkey: / )"
-  aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar"></button>
+          <button id="sidebar-toggle" class="icon-button" title="Toggle Table of Contents (Shortkey: T )" aria-label="Toggle Table of Contents" aria-controls="sidebar">
+            <div class="icon-sidebar fa-icon"></div>
+          </button>
+
+          <button popovertarget="theme-list" class="icon-button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
+            <div class="icon-theme fa-icon"></div>
+          </button>
+          <ul id="theme-list" aria-label="Themes" role="menu" popover>
+            <li role="none"><button role="menuitem" class="theme" id="au-lait">Au Lait</button></li>
+            <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
+            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
+            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
+            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
+          </ul>
+
+          <button id="search-toggle" class="icon-button" title="Toggle Search Box (Shortkey: / )" aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
+            <div class="icon-search fa-icon"></div>
+          </button>
 
           <div id="search-wrapper" class="hidden">
             <form id="searchbar-outer" class="searchbar-outer">
@@ -62,9 +68,11 @@
 
         <div class="menu-title">{{ book_title }}</div>
 
-        <div class="right-buttons icon-button">
+        <div class="right-buttons">
           {{#if git_repository_url}}
-          <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository" target="_blank" rel="noopener"></a>
+          <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository" target="_blank" rel="noopener">
+            <div class="icon-github fa-icon"></div>
+          </a>
           {{/if}}
         </div>
       </div>
@@ -86,13 +94,13 @@
           <nav class="nav-wrapper" aria-label="Page navigation">
             {{#previous}}
             <a rel="prev" href="{{ path_to_root }}{{link}}" class="nav-chapters previous icon-button" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
-               {{title}}
+              < {{title}}
             </a>
             {{/previous}}
 
             {{#next}}
             <a rel="next" href="{{ path_to_root }}{{link}}" class="nav-chapters next icon-button" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-              {{title}} 
+              {{title}} >
             </a>
             {{/next}}
           </nav>
