--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -11,40 +11,41 @@ $url-github: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org
 $url-prev: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>');
 $url-next: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg>');
 
+@mixin mask-icon($url) {
+  mask-image: $url;
+  -webkit-mask-image: $url;
+}
+
 .icon-sidebar {
-  mask-image: $url-sidebar;
-  -webkit-mask-image: $url-sidebar;
+  @include mask-icon($url-sidebar);
 }
 
 .icon-theme {
-  mask-image: $url-theme;
-  -webkit-mask-image: $url-theme;
+  @include mask-icon($url-theme);
 }
 
 .icon-search {
-  mask-image: $url-search;
-  -webkit-mask-image: $url-search;
+  @include mask-icon($url-search);
 }
 
-div.icon-github {
-  mask-image: $url-github;
-  -webkit-mask-image: $url-github;
+.icon-github {
+  @include mask-icon($url-github);
 }
 
 .icon-prev {
-  mask-image: $url-prev;
-  -webkit-mask-image: $url-prev;
+  @include mask-icon($url-prev);
 }
 
 .icon-next {
-  mask-image: $url-next;
-  -webkit-mask-image: $url-next;
+  @include mask-icon($url-next);
 }
 
 .fa-icon {
   width: 1em;
   height: 1em;
   background-color: var(--icons);
+
+  cursor: pointer;
 
   &:hover {
     background-color: var(--icons-hover);
