Fix the display of icons appropriately 🐬

--- a/scss/_chrome.scss
+++ b/scss/_chrome.scss
@@ -215,6 +215,9 @@ pre {
 }
 
 .nav-chapters {
+  display: flex;
+  align-items: center;
+
   font-size: 0.82em;
   text-align: center;
   text-decoration: none;
