--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -37,7 +37,7 @@
 @font-face {
   font-family: 'Source Code Pro';
   font-style: normal;
-  font-weight: bolder;
+  font-weight: normal;
   src: url(../woff/SourceCodePro-Medium.woff2) format('woff2');
   font-display: swap;
 }
@@ -47,7 +47,7 @@
 @font-face {
   font-family: 'Symbols Nerd Font Mono';
   font-style: normal;
-  font-weight: bolder;
+  font-weight: normal;
   src: url(../woff/NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.woff2) format('woff2');
   font-display: swap;
 }
