--- a/scss/_headline.scss
+++ b/scss/_headline.scss
@@ -5,6 +5,7 @@
   background-size: 100% $bg-height;
   background-position: bottom;
 
+  font-family: var.$italic-font;
   font-style: italic;
 
   margin-top: 0.75rem - var.$menu-bar-height;
