--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -11,8 +11,12 @@ $menu-bar-height: 2.6rem;
 
 $jump-shift: 1.25rem;
 
+$base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Ubuntu, sans-serif;
 $mono-font: 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
-$code-font-size: 0.82em;
+$italic-font: 'Open Sans';
+
+$base-font-size: 0.875rem;
+$code-font-size: 0.725rem;
 
 $color-pink: #ffb2cc;
 $color-purple: #dcb7f1;
