Fixed a few things that were missing regarding `font` settings 🐴

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -13,7 +13,7 @@ $jump-shift: 1.25rem;
 
 $base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Ubuntu, sans-serif;
 $mono-font: 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
-$italic-font: 'Open Sans';
+$italic-font: 'Open Sans', sans-serif;
 
 $base-font-size: 0.875rem;
 $code-font-size: 0.725rem;
