Absorb differences in behavior between browsers with respect to `tabindex` 🧹
I usually use Safari, but inconveniently, it was the only browser that had a different behavior regarding tab indexing...
Therefore, tab indexing was over-applied in Firefox and Chromium-based browsers.

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -59,7 +59,7 @@
               <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..."
                 aria-controls="searchresults-outer" aria-describedby="searchresults-header">
             </form>
-            <div id="searchresults-outer" popover>
+            <div id="searchresults-outer" tabindex="-1" popover>
               <div id="searchresults-header"></div>
               <ul id="searchresults"></ul>
             </div>
