fix: Elements use prohibited ARIA attributes 🔱

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -110,9 +110,9 @@
 
         <spacer></spacer>
 
-        <div id="righttoc" aria-label="Table of contents"></div>
+        <div id="righttoc"></div>
       </div>
-      <div id="bottomtoc" aria-label="Table of contents (bottom)"></div>
+      <div id="bottomtoc"></div>
     </div>
 
     <link rel="stylesheet" href="{{ path_to_root }}css/style.css" async>
