--- a/scss/_additional-color.scss
+++ b/scss/_additional-color.scss
@@ -4,6 +4,7 @@
   --toc-fg: #1f2328;
 
   --search-score: #40a02b;
+  --blockquote-color: #9e9e9e;
 }
 
 .frappe,
@@ -13,4 +14,5 @@
   --toc-fg: #f8e3a1;
 
   --search-score: #00c853;
+  --blockquote-color: #9e9e9e;
 }
